--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,6 +24,9 @@ jobs:
       - name: Build
         run: go build -v ./...
 
+      - name: Install tool
+        run: go install github.com/99designs/gqlgen
+
       - name: Generate
         run: go run github.com/99designs/gqlgen generate
 
